--- a/aboutme-style.css
+++ b/aboutme-style.css
@@ -22,7 +22,29 @@
 	font-style: oblique;
 	font-size: 3em;
 	font-family: "Trebuchet";
+
 }
+
+.drop-cap{
+	text-align: left;
+}
+
+.drop-cap:first-letter{
+	float: left;
+	font-size: 45px;
+	line-height: 1;
+	font-weight: bold;
+	margin-right: 9px;
+}
+
+a{
+	text-decoration: none;
+}
+
+a:hover{
+	text-decoration: underline;
+}
+
 
 p{
 	text-align: center;
